@@ -2,6 +2,9 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Dec 2008; Aaron Mavrinac <mavrinac@gmail.com> tpserver-cpp-0.5.1.ebuild:
+  Changed dev-scheme/drscheme to dev-scheme/plt-scheme in depends
+
   30 Sep 2008; Aaron Mavrinac <mavrinac@gmail.com> tpserver-cpp-9999.ebuild:
   Added development version from git
 
